micromobility_car_navigation/local/Project/dev_ws/log/build_2021-03-11_16-11-31/pathfinding/stderr.log
  File "/home/user/Projects/dev_ws/install/pathfinding/lib/python3.8/site-packages/pathfinding/pathfinding_service.py", line 9
    
    ^
SyntaxError: unexpected EOF while parsing

